After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 651930 - Nautilus won't allow compressing single .iso files
Nautilus won't allow compressing single .iso files
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
3.2.x
Other Linux
: Normal minor
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2011-06-05 13:52 UTC by el
Modified: 2012-02-01 13:29 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2



Description el 2011-06-05 13:52:02 UTC
When right-clicking .iso files, "Compress" won't appear. It does appear if I select _multiple_ .iso files at once, but I cannot just compress a single .iso for some weird reason (only open or extract it to look what is inside).
Comment 1 Fabio Durán Verdugo 2011-06-05 18:30:41 UTC
Yes is true, but I don't know if a intentional. the same way the iso file is a compress file.
Comment 2 el 2011-06-05 18:39:42 UTC
Iso compressed? Really? I thought it was a plain disk image.

Based that I was able to save 40% in size or so when compressing the iso, I highly doubt .iso is actually a compressed format.
Comment 3 Cosimo Cecchi 2011-06-06 21:40:07 UTC
-> file-roller

Those context menu items are provided by the file-roller extension.
Comment 4 el 2011-10-25 21:13:49 UTC
Issue still present in gnome 3.2/file-roller 3.2.
Comment 5 Paolo Bacchilega 2012-02-01 13:29:18 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.