allow to compress iso images and tar archives from the caja menu

disable the compress command only for already compressed archives

Based on FR commit: 8e3f98a6924fbb7b6582367430a21d5f22c9e96f
From: Paolo Bacchilega <paobac@src.gnome.org>
Gnome bug: http://bugzilla.gnome.org/show_bug.cgi?id=651930